tests/NormalTests/paczka1/fuzzy1/71388991.err
Error in line 1: iAO7 A664 29,0
Error in line 2: A912 A664 77,0
Error in line 8: gFl84ZOABlZ A12 15,1
Error in line 14: 6cwB1oC A664 81,79
Error in line 13: gFl84ZOABlZ A912 33,4
Error in line 24: gFl84ZOABlZ S8 90,1
Error in line 18: 6cwB1oC S8 72,9
Error in line 36: 6cwB1oC S8 98,67
